--- a/index.html
+++ b/index.html
@@ -18,41 +18,45 @@
     <div class="preparation-time">
         <p class="heading-1"><strong>Preparation Time</strong></p>
         <ul>
-            <li><strong>Total:</strong>1hr 40mins</li>
-            <li><strong>Preparation:</strong>40mins</li>
-            <li><strong>Baking:</strong>40mins</li>
-            <li><strong>Frosting:</strong>20mins</li>
+            <li class="mmm"><strong>Total:</strong> 1hr 40mins</li>
+            <li class="mmm"><strong>Preparation:</strong> 40mins</li>
+            <li class="mmm"><strong>Baking:</strong> 40mins</li>
+            <li class="mmm"><strong>Frosting:</strong> 20mins</li>
         </ul>
     </div>
-    <h3 class="alignment heading-2">Ingredients</h3>
-    <ul>
-        <li>14 Oreos-roughly chopped</li>
-        <li>300g flour-regular all purpose</li>
-        <li>25g cornflour</li>
-        <li>half tsp baking soda</li>
-        <li>1 tsp baking powder</li>
-        <li>half tsp salt-omit if using salted butter</li>
-        <li>113g unsalted butter-room temperature</li>
-        <li>105g unflavoured vegetable oil</li>
-        <li>332g white granulated sugar</li>
-        <li>3 large eggs</li>
-        <li>one-quarter tbsp vanilla extract</li>
-        <li>1 tsp white vinegar</li>
-        <li>337g buttermilk-room temperature</li>
-        <h3 class="alignment heading-2">Ingredients for oreo buttercream frosting</h3>
-        <ul>
-          <li>14 Oreos-blended to fine crumbs</li>
-          <li>340g unsalted butter-room temperature</li>
-          <li>350g icing sugar</li>
-          <li>one and half tsp vanilla extract</li>
-          <li>one and half tbsp milk</li>
-        </ul>
+    <div class="ingredients">
+      <h3 class="alignment heading-2">Ingredients</h3>
+      <ul>
+          <li class="jjj">14 Oreos-roughly chopped</li>
+          <li class="jjj">300g flour-regular all purpose</li>
+          <li class="jjj">25g cornflour</li>
+          <li class="jjj">half tsp baking soda</li>
+          <li class="jjj">1 tsp baking powder</li>
+          <li class="jjj">half tsp salt-omit if using salted butter</li>
+          <li class="jjj">113g unsalted butter-room temperature</li>
+          <li class="jjj">105g unflavoured vegetable oil</li>
+          <li class="jjj">332g white granulated sugar</li>
+          <li class="jjj">3 large eggs</li>
+          <li class="jjj">one-quarter tbsp vanilla extract</li>
+          <li class="jjj">1 tsp white vinegar</li>
+          <li class="jjj">337g buttermilk-room temperature</li>
+    </div>
+        <div>
+          <h3 class="alignment heading">Ingredients for oreo buttercream frosting</h3>
+          <ul>
+            <li class="kkk">14 Oreos-blended to fine crumbs</li>
+            <li class="kkk">340g unsalted butter-room temperature</li>
+            <li class="kkk">350g icing sugar</li>
+            <li class="kkk">one and half tsp vanilla extract</li>
+            <li class="kkk">one and half tbsp milk</li>
+          </ul>
+        </div>
         <br>
         <hr>
 
         <br>
 
-        <h3 class="heading-2 indent">Instructions</h3>
+        <h3 class="ggg">Instructions</h3>
 
         <ol class="alignment">
           <li>
